# name-generator

./: .gitignore  2025-02-23-name-generator.md  README.md  evaluate_model.py  main.py  model.py  parsing.py  pyproject.toml  train.py  train_model.py  training.py  utils.py
