[tool.poetry]
name = "name-generator"
version = "0.1.0"
description = ""
authors = ["Paolo Notaro <paolo.notaro@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
mlflow = "^2.20.1"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "7.0.0"
pyproject-flake8 = "^7.0.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100